feat: 유저별 신청완료 특강정보 목록 조회 파사드 기능 구현